--- a/web_backend/src/web_backend.Application.Contracts/web_backend.Application.Contracts.csproj
+++ b/web_backend/src/web_backend.Application.Contracts/web_backend.Application.Contracts.csproj
@@ -14,6 +14,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="CsvHelper" Version="33.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
 		<PackageReference Include="Volo.Abp.ObjectExtending" Version="8.3.1" />
 		<PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="8.3.1" />
 		<PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="8.3.1" />
