--- a/web_backend/src/web_backend.Application/web_backend.Application.csproj
+++ b/web_backend/src/web_backend.Application/web_backend.Application.csproj
@@ -14,9 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
     <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="8.3.1" />
