--- a/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
+++ b/web_backend/src/web_backend.Blazor.Client/web_backend.Blazor.Client.csproj
@@ -25,6 +25,8 @@
 		<PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly" Version="8.3.1" />
 		<PackageReference Include="Volo.Abp.Http.Client" Version="8.3.1" />
 		<PackageReference Include="Volo.Abp.Http.Client.IdentityModel.WebAssembly" Version="8.3.1" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly" Version="8.3.1" />
+
 	</ItemGroup>
 
 	<ItemGroup>
