--- a/web_backend/src/web_backend.HttpApi.Host/web.config
+++ b/web_backend/src/web_backend.HttpApi.Host/web.config
@@ -1,18 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <location path="." inheritInChildApplications="false">
-    <system.webServer>
-      <handlers>
-        <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
-      </handlers>
-      <aspNetCore processPath="dotnet" arguments=".\web_backend.HttpApi.Host.dll" stdoutLogEnabled="false" stdoutLogFile=".\Logs\stdout" hostingModel="inprocess" />
-    </system.webServer>
-  </location>
-  <system.webServer>
-    <httpProtocol>
-      <customHeaders>
-        <remove name="x-powered-by" />
-      </customHeaders>
-    </httpProtocol>
-  </system.webServer>
+	<location path="." inheritInChildApplications="false">
+		<system.webServer>
+			<handlers>
+				<add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2"
+					 resourceType="Unspecified" />
+			</handlers>
+			<aspNetCore processPath="dotnet"
+						arguments=".\web_backend.HttpApi.Host.dll"
+						stdoutLogEnabled="false"
+						stdoutLogFile=".\Logs\stdout"
+						hostingModel="inprocess" />
+		</system.webServer>
+	</location>
+
+	<system.webServer>
+		<security>
+			<requestFiltering>
+				<!-- 1 GB upload limit -->
+				<requestLimits maxAllowedContentLength="1073741824" />
+			</requestFiltering>
+		</security>
+
+		<httpProtocol>
+			<customHeaders>
+				<remove name="x-powered-by" />
+			</customHeaders>
+		</httpProtocol>
+	</system.webServer>
 </configuration>
