--- a/web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj
+++ b/web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Volo.Abp.AspNetCore.MultiTenancy" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Autofac" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="8.3.1" />
+    <PackageReference Include="Volo.Abp.BlobStoring.Azure" Version="9.1.2" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="8.3.1" />
   </ItemGroup>
