--- a/web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj
+++ b/web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
@@ -19,7 +19,7 @@
     <PackageReference Include="Volo.Abp.AspNetCore.MultiTenancy" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Autofac" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="8.3.1" />
-    <PackageReference Include="Volo.Abp.BlobStoring.Azure" Version="9.1.2" />
+    <PackageReference Include="Volo.Abp.BlobStoring.Azure" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="8.3.1" />
     <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="8.3.1" />
   </ItemGroup>
