--- a/.github/workflows/production_vss-backend-api.yml
+++ b/.github/workflows/production_vss-backend-api.yml
@@ -2,11 +2,11 @@ name: Build and deploy ASP.Net Core app to Azure Web App - vss-backend-api
 
 on:
   push:
-    branches: [ Production ]
+    branches:
+      - Production
   workflow_dispatch:
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     permissions:
@@ -15,19 +15,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up .NET SDK
+      - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
 
-      - name: Publish solution (API + DbMigrator)
-        run: dotnet publish ./web_backend/web_backend.sln -c Release -o ./publish
+      - name: Build with dotnet
+        run: dotnet build ./web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj --configuration Release
+
+      - name: dotnet publish
+        run: dotnet publish ./web_backend/src/web_backend.HttpApi.Host/web_backend.HttpApi.Host.csproj -c Release -o myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: api-publish
-          path: ./publish
+          name: myapp
+          path: myapp
 
   deploy:
     runs-on: ubuntu-latest
@@ -40,25 +43,18 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: api-publish
-          path: ./publish
+          name: myapp
+          path: myapp
 
       - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.VSS_CLIENT_ID }}
-          tenant-id:  ${{ secrets.VSS_TENANT_ID }}
+          tenant-id: ${{ secrets.VSS_TENANT_ID }}
           subscription-id: ${{ secrets.VSS_SUBSCRIPTION_ID }}
-
-      - name: Run DbMigrator (apply EF migrations)
-        run: |
-          dotnet ./web_backend.DbMigrator.dll
-        working-directory: ./publish           
-        env:
-          ConnectionStrings__Default: ${{ secrets.PROD_SQL_CONN }}
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'vss-backend-api'
-          package: ./publish
+          package: myapp
